<resources>
    <string name="app_name">SenProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activities">activities</string>
    <string name="back">Back</string>
    <string name="plus_icon">+</string>
    <string name="activities_string">What did you do lately?</string>
    <string name="journal_string">What is on your mind?</string>
    <string name="txt_hint">Enter text</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="time">time</string>
    <string name="edit_activities_list">Edit Activities List</string>
    <string name="nameActivities">Name:</string>
    <string name="icon_activities_choice">Icon:</string>
    <string name="add_new_activity">Add new activity</string>
</resources>