<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.EntryDescription">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:icon="@drawable/ic_arrow_back"
        app:iconSize="30sp"
        android:layout_marginBottom="15dp"
        />

    <ImageView
        android:id="@+id/iv_mood"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:src="@drawable/emotion_great"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:text="@string/date"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="14sp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        tools:listitem="@layout/activities_card_item"
        android:orientation="horizontal"
        app:spanCount="3"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        />
</LinearLayout>