<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EditActivities">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/main_background"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:icon="@drawable/ic_arrow_back"
            app:iconSize="30dp"
            app:iconPadding="0dp"
            app:iconGravity="textStart"
            android:backgroundTint="@color/main_background"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:text="@string/edit_activities_list"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_activities_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toTopOf="@id/cv_add_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:padding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:outlineSpotShadowColor="@color/secondary_text"
        android:outlineAmbientShadowColor="@color/secondary_text"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_activities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/activities_item"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/cv_activities_list"
        app:layout_constraintBottom_toTopOf="@id/cv_add_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:padding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        android:outlineSpotShadowColor="@color/secondary_text"
        android:outlineAmbientShadowColor="@color/secondary_text"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            >

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:srcCompat="@drawable/ic_add_entry"
                android:layout_gravity="center"
                app:tint="@color/main_background"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/add_new_activity"
                android:textSize="24sp"
                android:textStyle="bold|normal"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_add_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/cv_add_button"
        app:layout_constraintBottom_toTopOf="@id/cv_emoji"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:padding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        android:outlineSpotShadowColor="@color/secondary_text"
        android:outlineAmbientShadowColor="@color/secondary_text"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_icon"
                android:text="@string/nameActivities"
                android:textSize="24sp"
                android:textStyle="bold|normal"
                />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/iv_icon"
                app:layout_constraintStart_toEndOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintBottom_toBottomOf="parent"

                android:text="@string/icon_activities_choice"
                android:textSize="24sp"
                android:textStyle="bold|normal"
                />

            <TextView
                android:id="@+id/iv_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"

                app:layout_constraintTop_toBottomOf="@id/et_name"
                app:layout_constraintStart_toEndOf="@id/tv_icon"
                app:layout_constraintBottom_toBottomOf="parent"

                android:text=";)"
                android:textSize="20sp"
                android:background="@color/secondary_background"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|end"
            >

            <at.markushi.ui.CircleButton
                android:id="@+id/btn_confirm"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"

                app:cb_color="@color/white"
                android:src="@drawable/ic_confirm"
                />

            <at.markushi.ui.CircleButton
                android:id="@+id/btn_cancel"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"

                app:cb_color="@color/white"
                android:src="@drawable/ic_cancel"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_emoji"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/cv_add_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:padding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        android:outlineSpotShadowColor="@color/secondary_text"
        android:outlineAmbientShadowColor="@color/secondary_text"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        >

        <androidx.emoji2.emojipicker.EmojiPickerView
            android:id="@+id/emoji_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>